frontend/assets/css/base.css
/* ... */
.base-chips-container-invalid .base-chips-inner,
.base-chips-container-invalid .base-chips-inner:focus-within {
  border: var(--base-error-border);
}

.base-chips-label {
  color: var(--base-text-color);
  font-size: var(--base-standard-label-size);
}

.base-chips-container-disabled .base-chips-label {
  color: var(--base-text-color-disabled);
}

.base-chips-chip-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: var(--base-chips-chip-list-padding);
}

.base-chips-chip {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: var(--base-chips-chip-inner-padding);
  background-color: var(--base-chips-chip-background-color);
  color: var(--base-chips-chip-text-color);
  padding: var(--base-chips-chip-padding);
  border-radius: 100vw;
}

.base-chips-container-disabled .base-chips-chip {
  color: var(--base-chips-chip-text-color-disabled);
}

.base-chips-chip-label {
  font-size: var(--base-chips-chip-label-size);
}

.base-chips-input-box-container {
  display: flex;
}

.base-chips-input {
  width: 100%;
  background-color: inherit;
  color: inherit;
  border: none;
  outline: none;
}

.base-chips-options-dropdown {
  position: relative;
  width: 100%;
}

.base-chips-options-popup {
  position: absolute;
  width: 100%;
  visibility: hidden;
  opacity: 0;
  max-height: var(--base-chips-popup-max-height);
  overflow-y: auto;
  z-index: 1;
  transition: visibility 0.5s, opacity 0.2s linear 0.125s;
  background-color: var(--base-chips-popup-background-color);
  border-radius: var(--base-chips-popup-border-radius);
  box-shadow: var(--base-standard-box-shadow);
  padding: 4px 0;
}

.base-chips-above .base-chips-options-popup {
  bottom: 0;
}

.base-chips-below .base-chips-options-popup {
  top: 0;
}

.base-chips-container-open .base-chips-options-popup {
  visibility: visible;
  opacity: 1;
  transition: visibility 0s, opacity 0.2s linear;
}

.base-chips-option {
  padding: 2px 10px;
  font-size: 0.9em;
  cursor: pointer;
  transition: background-color 0.1s linear;
}

.base-chips-container-open .base-chips-option:hover {
  background-color: var(--base-chips-popup-background-color-hover);
}

.base-chips-container-open .base-chips-option:active {
  background-color: var(--base-chips-popup-background-color-active);
}

.base-chips-container-open .base-chips-option-selecting {
  background-color: var(--base-chips-popup-background-color-hover);
}

.base-chips-container-compact {
  padding: var(--base-compact-padding) 0;
  display: flex;
  flex-direction: column;
  gap: var(--base-compact-gap);
  background-color: var(--base-input-background-color);
  color: var(--base-input-text-color);
}

.base-chips-container-compact > * {
  margin: 0 var(--base-compact-padding);
}

.base-chips-container-compact .base-chips {
  margin: 0;
}

.base-chips-container-compact .base-chips-label {
  color: var(--base-compact-label-color);
  font-size: var(--base-compact-label-size);
}

.base-chips-container-compact .base-chips-inner {
  padding: 0;
  font-size: var(--base-compact-text-size);
  border: none;
  border-radius: 0;
  margin: 0 var(--base-compact-padding);
}

.base-chips-container-compact .base-chips-chip-list {
  gap: var(--base-compact-gap);
}

.base-chips-container-compact .base-chips-chip-label {
  font-size: var(--base-compact-chip-label-size);
}

.base-chips-container-compact .base-chips-options-popup {
  margin-top: var(--base-compact-padding);
}

.base-chips-container-compact .base-chips-inner,
.base-chips-container-compact .base-chips-inner:focus-within {
  border: none;
}

.base-chips-container-compact .base-chips-error {
  font-size: var(--base-compact-error-size);
}

/*               */
/*    TOOLTIP    */
/*               */

.base-tooltip-container {
  position: relative;
}

.base-tooltip-popup-container {
  position: absolute;
  top: 100%;
  left: 50%;
  transform: translateX(-50%);
  width: var(--base-tooltip-popup-max-width);
  display: flex;
  justify-content: center;
}

.base-tooltip-popup {
  visibility: hidden;
  opacity: 0;
  z-index: 1;
  display: flex;
  justify-content: center;
  transition: all 0.15s ease-in-out;
}

.base-tooltip-text {
  background-color: var(--base-tooltip-background-color);
  color: var(--base-tooltip-text-color);
  font-size: var(--base-tooltip-font-size);
  padding: 2px 6px;
  border-radius: var(--base-tooltip-border-radius);
  box-shadow: var(--base-standard-box-shadow);
}

.base-tooltip:hover .base-tooltip-popup {
  visibility: visible;
  opacity: 1;
}

.base-tooltip:hover .base-tooltip-popup-container:hover .base-tooltip-popup {
  visibility: hidden;
  opacity: 0;
}

.base-tooltip.base-tooltip-disabled:hover .base-tooltip-popup {
  visibility: hidden;
  opacity: 0;
}

/*             */
/*    BADGE    */
/*             */

.base-badge-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.base-badge {
  height: var(--base-badge-height);
  padding: var(--base-badge-padding);
  border-radius: 100vw;
  font-size: var(--base-badge-font-size);
  display: flex;
  justify-content: center;
  align-items: center;
}

.base-badge-primary {
  background-color: var(--base-badge-primary-background-color);
  color: var(--base-badge-primary-text-color);
}

.base-badge-secondary {
  background-color: var(--base-badge-secondary-background-color);
  color: var(--base-badge-secondary-text-color);
}

.base-badge-danger {
  background-color: var(--base-badge-danger-background-color);
  color: var(--base-badge-danger-text-color);
}

/*                   */
/*    DATE PICKER    */
/*                   */

.base-date-picker-container {
  padding: var(--base-form-padding);
  display: flex;
  flex-direction: column;
  gap: var(--base-padding-small);
}

.base-date-picker-label-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 4px;
}

.base-date-picker-label {
  color: var(--base-date-picker-text-color);
  font-size: var(--base-standard-label-size);
}
/* ... */

